refactor: 멤버 서비스단 로직 리팩토링 및 오류 수정